Bug #158424 fix: Frontend>> Drop-down text should wrapped properly under the dropdown menu of 'Select UCM Type'

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -22,3 +22,7 @@ width:200px !important;
 .tjucm-wrapper .tj-wordwrap{
 word-break: break-word;
 }
+
+#copyModal .chzn-container{
+	min-width: 150px;
+}
